--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "description": "a project used for the unit testing with NodeJS home task",
   "main": "index.js",
   "scripts": {
-    "test": "npm test",
+    "test": "mocha ./src/data_handlers/user_data_handler.test.js",
     "start-server": "node ./src/server/server.js",
-    "eslint": "eslint ./"
+    "lint": "eslint .",
+    "coverage": "nyc npm run test"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint . --fix --color --format table"
+    ]
   },
   "repository": {
     "type": "git",
@@ -20,22 +26,31 @@
   "homepage": "https://github.com/stranger2626/unit-testing-with-mocks-home-task#readme",
   "husky": {
     "hooks": {
-      "pre-commit": "npm run eslint"
+      "pre-commit": "npm run lint"
     }
   },
   "dependencies": {
     "axios": "^0.19.2",
-    "express": "^4.17.1"
+    "chai": "^4.3.6",
+    "eslint-formatter-table": "^7.32.1",
+    "express": "^4.17.1",
+    "proxyquire": "^2.1.3",
+    "sinon": "^14.0.1",
+    "sinon-chai": "^3.7.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
-    "eslint": "^7.10.0",
+    "eslint": "^7.32.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "husky": "^4.3.0",
+    "husky": "^4.3.8",
+    "lint-staged": "^13.0.3",
     "mocha": "^8.1.3",
-    "nyc": "^15.1.0"
+    "nock": "^13.2.9",
+    "nyc": "^15.1.0",
+    "prettier": "^2.7.1"
   }
 }
